import "../../../com/message/v1/message.proto";
import "../../../com/message/v1/chat.proto";

package services.message.v1;

service MessageService {
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
    required com.message.v1.Chat chat = 1;
    required string content = 2;
}

message SendMessageResponse {
    required com.message.v1.Message msg = 1;
}

message GetMessagesRequest {
    optional string page_start = 1;
    required int32 page_size = 2;
    required com.message.v1.Chat chat = 3;
}

message GetMessagesResponse {
    required string page_next = 1;
    required int32 count = 2;
    required int32 total = 3;
    repeated com.message.v1.Message data = 4;
}

